--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
 															Guangming Huang at University of Science and Technology of China (USTC) in June 2017. His research career
 															started at Jiangxi Normal University (JXNU), where he received his B.S. in Chemistry in 2012.
 															In 2016 and 2019, he visited Dr. Brandon T. Ruotolo’s lab at University of Michigan as a visiting graduate
-															student and visiting scholar, respectively, where he started and extended his ion mobility spectrometry research.</p>
+															student and visiting scholar, respectively, where he started and extended his ion mobility spectrometry research.
+															After these professional preparations, he joined the College of Chemistry at Nankai University in 2021 as 
+															a tenure-tracking Assistant Professor, where he was also one of the members of "Hundred Youth Academic 
+															Leader" of Nankai University.</p>
 														</article>
 
 												</li>
@@ -177,7 +180,7 @@
 															<header>
 																<span class="date">Academic Activities</span>																
 															</header>
-															<p>Dr. Gongyu Li is active acedmically as demonstrated by his continuous conference attending and oral presentations
+															<p>Dr. Gongyu Li is active acdemically as demonstrated by his continuous conference attending and oral presentations
 															as well as serving as invited reviewer and judge reviewer for peer-reviewed journals. Amongst multiple academic 
 															recognitions by different international soceities over his academic career so far, Dr. Gongyu Li has been recently 
 															honored with 2019 ASMS Postdoctoral Career Development Award (ASMS, American Society for Mass Spectrometry) and 
@@ -191,8 +194,7 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 24</span>
-																<h3><a href="#">One more post</a></h3>
+																<span class="date">导师简介</span>
 															</header>
 															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
 															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
