--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date"><strong>导师简介</strong></span>
+																<span class="date">导师简介</span>
 															</header>
 															<p><strong>李功玉，男，南开大学化学学院特聘研究员，博士生导师。2017年06月博士毕业于中国科学技术大学分析化学专业，
 															获理学博士学位，指导老师为国家杰青、中组部青千、单细胞质谱专家黄光明教授。2017年08月至2021年1月在美国威斯康星大学
