--- a/index.html
+++ b/index.html
@@ -145,6 +145,23 @@
 											6 oral presentations and 29 scientific publications to date, including 2 Nat. Commun., 
 											4 Anal. Chem., 1 Chem. Sci. and 1 Trends Anal. Chem. papers, along with 380+ citations.</p>											
 										</article>
+										
+										<!-- Excerpt -->
+														<article class="box excerpt">
+															<header>
+																<span class="date">导师简介</span>
+															</header>
+															<p><strong>李功玉，男，南开大学化学学院特聘研究员，博士生导师。2017年06月博士毕业于中国科学技术大学分析化学专业，
+															获理学博士学位，指导老师为国家杰青、中组部青千、单细胞质谱专家黄光明教授。2017年08月至2021年1月在美国威斯康星大学
+															麦迪逊分校进行博士后研究，合作导师为药学院Lingjun Li（李灵军）教授（质谱顶级期刊JASMS副主编、全球50大杰出女性科学
+															家之一）。李博士曾分别于2016年和2019年两次前往美国密歇根大学进行交流学习，合作导师为结构质谱专家、密歇根大学终身
+															教授Brandon Ruotolo。2012年6月，本科毕业于江西师范大学，获学士学位。2021年2月，加入南开大学化学学院，分析科学研究中心。
+															相关课题及成果已成功申报1项国家基金委面上项目（参与），1项中科大青年创新基金（主持）和1项美国质谱协会博士后研究基金
+															（主持），并获批一项中国授权专利。鉴于在超快结构质谱分析领域的创新性研究成果，李博士于2019年被美国质谱学会
+															（American Society for Mass Spectrometry）授予该年度博士后职业发展奖（2019 ASMS Postdoctoral Career Development Award，该奖项为美国质谱协会博士后最高奖，申请人
+															为该年度五位获奖人中的唯一中国籍获奖者）。其研究成果逐渐获得国际同行的认可，多次受邀在国际顶级会议上做口头报告，
+															并担任包括Science Advances和Chemical Science等在内的多家top同行评议SCI期刊的独立审稿人和仲裁审稿人。</strong></p>
+														</article>
 								
 
 								</div>
@@ -200,10 +217,10 @@
 															获理学博士学位，指导老师为国家杰青、中组部青千、单细胞质谱专家黄光明教授。2017年08月至2021年1月在美国威斯康星大学
 															麦迪逊分校进行博士后研究，合作导师为药学院Lingjun Li（李灵军）教授（质谱顶级期刊JASMS副主编、全球50大杰出女性科学
 															家之一）。李博士曾分别于2016年和2019年两次前往美国密歇根大学进行交流学习，合作导师为结构质谱专家、密歇根大学终身
-															教授Brandon Ruotolo。2012年6月，本科毕业于江西师范大学，获学士学位。相关课题及成果已成功申报1项国家基金委面上项目
-															（参与），1项中科大青年创新基金（主持）和1项美国质谱协会博士后研究基金（主持），并获批一项中国授权专利。鉴于在
-															超快结构质谱分析领域的创新性研究成果，李博士于2019年被美国质谱学会（American Society for Mass Spectrometry）授予
-															该年度博士后职业发展奖（2019 ASMS Postdoctoral Career Development Award，该奖项为美国质谱协会博士后最高奖，申请人
+															教授Brandon Ruotolo。2012年6月，本科毕业于江西师范大学，获学士学位。2021年2月，加入南开大学化学学院，分析科学研究中心。
+															相关课题及成果已成功申报1项国家基金委面上项目（参与），1项中科大青年创新基金（主持）和1项美国质谱协会博士后研究基金
+															（主持），并获批一项中国授权专利。鉴于在超快结构质谱分析领域的创新性研究成果，李博士于2019年被美国质谱学会
+															（American Society for Mass Spectrometry）授予该年度博士后职业发展奖（2019 ASMS Postdoctoral Career Development Award，该奖项为美国质谱协会博士后最高奖，申请人
 															为该年度五位获奖人中的唯一中国籍获奖者）。其研究成果逐渐获得国际同行的认可，多次受邀在国际顶级会议上做口头报告，
 															并担任包括Science Advances和Chemical Science等在内的多家top同行评议SCI期刊的独立审稿人和仲裁审稿人。</strong></p>
 														</article>
