--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="research.html" class="image featured"><img src="images/LimsLab_logo_simplified.jpg" alt="" /></a>
+										<a href="research.html" class="image featured"><img src="images/native_im_ms.jpg" alt="" /></a>
 										<header>
 											<h3>Native IM-MS+</h3>
 										</header>
@@ -66,7 +66,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/LimsLab_logo_simplified.jpg" alt="" /></a>
+										<a href="research.html" class="image featured"><img src="images/in_cell_ms.jpg" alt="" /></a>
 										<header>
 											<h3>In-cell MS+</h3>
 										</header>
@@ -79,7 +79,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/LimsLab_logo_simplified.jpg" alt="" /></a>
+										<a href="research.html" class="image featured"><img src="images/targeted_proteomics.jpg" alt="" /></a>
 										<header>
 											<h3>Targeted Proteomics+</h3>
 										</header>
