--- a/news.html
+++ b/news.html
@@ -58,11 +58,11 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 30</span>
-																<h3><a href="#">Just another post</a></h3>
+																<span class="date">October 2</span>
+																<h3><a href="news.html">LimsLab Group Site Gets Online!</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>We are SO excited to share this unique research group (<strong>LimsLab @ NKU</strong>) site to the whole
+															world. The LimsLab group site has been officially released on Oct 2nd, 2020. Hello, World! </p>
 														</article>
 
 												</li>
@@ -71,71 +71,22 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 28</span>
-																<h3><a href="#">And another post</a></h3>
+																<span class="date">September 18</span>
+																<h3><a href="https://www.lilabs.org/post/dr-gongyu-li-accepts-top-faculty-position">Gongyu Accepts Top Faculty Position</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
-														</article>
-
-												</li>
-												<li>
-
-													<!-- Excerpt -->
-														<article class="box excerpt">
-															<header>
-																<span class="date">July 24</span>
-																<h3><a href="#">One more post</a></h3>
-															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
-														</article>
-
-												</li>
-											</ul>
-										</section>
-
-									<!-- Highlights -->
-										<section>
-											<ul class="divided">
-												<li>
-
-													<!-- Highlight -->
-														<article class="box highlight">
-															<header>
-																<h3><a href="#">Something of note</a></h3>
-															</header>
-															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
-															<p>Phasellus sed laoreet massa id justo mattis pharetra. Fusce suscipit ligula vel quam
-															viverra sit amet mollis tortor congue magna lorem ipsum dolor et quisque ut odio facilisis
-															convallis. Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus
-															facilisis convallis. Etiam non nunc vel est suscipit convallis non id orci.</p>
+															<p>Looking back on his time in the Li Research Group, postdoctoral fellow Dr. Gongyu Li believes his time spent 
+															in Madison was fundamental to his growth towards academic faculty. Now beginning his fourth year of fellowship 
+															research, Gongyu has already produced an impressive body of work in the fields of ion mobility mass spectrometry 
+															(IM-MS), on-tissue mass spectrometry, and targeted proteomics. While his scientific acumen has been recognized by 
+															numerous organizations during his time at UW-Madison, his latest achievement may dwarf them all. Dr. Gongyu Li was 
+															offered, and has since accepted, a full-time faculty position at Nankai University, one of the premier Chinese 
+															institutions in the field of chemistry...</p>
 															<ul class="actions">
-																<li><a href="#" class="button icon solid fa-file">Learn More</a></li>
+																<li><a href="https://www.lilabs.org/post/dr-gongyu-li-accepts-top-faculty-position" class="button icon solid fa-file">Read More</a></li>
 															</ul>
 														</article>
 
-												</li>
-												<li>
-
-													<!-- Highlight -->
-														<article class="box highlight">
-															<header>
-																<h3><a href="#">Something of less note</a></h3>
-															</header>
-															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" /></a>
-															<p>Phasellus sed laoreet massa id justo mattis pharetra. Fusce suscipit ligula vel quam
-															viverra sit amet mollis tortor congue magna lorem ipsum dolor et quisque ut odio facilisis
-															convallis. Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus
-															facilisis convallis. Etiam non nunc vel est suscipit convallis non id orci.</p>
-															<ul class="actions">
-																<li><a href="#" class="button icon solid fa-file">Learn More</a></li>
-															</ul>
-														</article>
-
-												</li>
-											</ul>
-										</section>
+												</li>												
 
 								</div>
 
