--- a/news.html
+++ b/news.html
@@ -155,13 +155,13 @@
 											research pioneers with diverse research backgrounds. These academic and personal activities significantly improved 
 											my understanding of academic research and communication. And I realize none of this would have been possible if not 
 											for the continuous support of Dr. Lingjun Li."</p>
-											<h3>Advice for others</h3>
+											<h3><strong>Advice for others</strong></h3>
 											<p>When asked for the advice he would give young researchers--especially those looking to go into academia, Gongyu 
-											listed four specific items: "1) Get solid data published as soon as you can, but stay hungry when you experience 
-											setbacks or receive unexpected preliminary data. 2) Try your best to make your research unique and then make it unique 
-											enough in your community (e.g. IM-MS). 3) All nice ideas come from reading - please keep comb the literature every day 
-											and anticipate collecting over 10,000 references in your library by the time you are ready to attend your thesis defense. 
-											4) Check out how much raw data you have periodically (or at least annually). Make a bar chart to show your productivity over 
+											listed four specific items: "<strong>1) Get solid data published as soon as you can</strong>, but stay hungry when you experience 
+											setbacks or receive unexpected preliminary data. <strong>2) Try your best to make your research unique</strong> and then make it unique 
+											enough in your community (e.g. IM-MS). <strong>3) All nice ideas come from reading </strong> - please keep comb the literature every day 
+											and anticipate collecting over <strong>10,000 references</strong> in your library by the time you are ready to attend your thesis defense. 
+											<strong>4) Check out how much raw data you have periodically</strong> (or at least annually). <strong>Make a bar chart</strong> to show your productivity over 
 											time since your first year as a fresh PhD student. You will be surprised how much you have grown."</p>
 											<h3>Moving forward</h3>
 											<p>The entire Li Research Group will be sad to see Gongyu leave. (We also think he will be sad to leave us..) But Gongyu 
