--- a/publication.html
+++ b/publication.html
@@ -65,7 +65,7 @@
 									<p>Gongyu Li et al. 2021 in press</p>
 									<p>Gongyu Li et al. 2021 in press</p>
 									<p>1. Fugang Xu*, Miao Deng, <strong>Gongyu Li</strong>, Shouhui Chen, Li Wang*. Electrochemical behavior of cuprous oxide-reduced graphene 
-									oxide nanocomposites and their application in nonenzymatic hydrogen peroxide sensing. <a href="https://www.sciencedirect.com/science/article/pii/S0013468612016842">Electrochim. Acta</a> 2013, 88, 59-65.</p>
+									oxide nanocomposites and their application in nonenzymatic hydrogen peroxide sensing. <a href="https://www.sciencedirect.com/science/article/pii/S0013468612016842"><i>Electrochim. Acta</i></a> 2013, 88, 59-65.</p>
 									
 								</article>
 
