--- a/publication.html
+++ b/publication.html
@@ -69,8 +69,8 @@
 									<p>2. Hongying Zhu, <strong>Gongyu Li</strong>, Guangming Huang*. 
 									<a href="http://rd.springer.com/article/10.1007%2Fs13361-014-0862-7"><U>Screening of 
 									complicated matrixes with paper assisted ultrasonic spray ionization mass spectrometry.
-									</a></U> <strong><i>J. Am. Soc. Mass Spectrom. </i></strong> 2014, 25, 935-942.</p>
-									<p>1. Fugang Xu*, Miao Deng, <strong>Gongyu Li</strong>, Shouhui Chen, Li Wang*. 
+									</a></U> <strong><i>J. Am. Soc. Mass Spectrom. </i></strong> 2014, 25, 935-942.<br>
+									1. Fugang Xu*, Miao Deng, <strong>Gongyu Li</strong>, Shouhui Chen, Li Wang*. 
 									<a href="https://www.sciencedirect.com/science/article/pii/S0013468612016842"><U>Electrochemical 
 									behavior of cuprous oxide-reduced graphene oxide nanocomposites and their application 
 									in nonenzymatic hydrogen peroxide sensing.</a></U> <strong><i>Electrochim. Acta</i></strong> 2013, 88, 59-65.</p>
