--- a/publication.html
+++ b/publication.html
@@ -62,15 +62,15 @@
 									<p>Gongyu Li et al. 2021 in press</p>
 									<p>Gongyu Li et al. 2021 in press</p>
 									<p>Gongyu Li et al. 2021 in press</p>
-									<p>3. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
+									<strong>3</strong>. <strong>Gongyu Li</strong>, Yue Yin, Guangming Huang*. 
 									<a href="http://pubs.rsc.org/en/content/articlelanding/2014/ra/c4ra12386g#!divAbstract"><U>Increased 
 									disulfide peptide sequence coverage via “cleavage ON/OFF” switch during nanoelectrospray.
-									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. </p>
-									<p>2. Hongying Zhu, <strong>Gongyu Li</strong>, Guangming Huang*. 
+									</a></U> <strong><i>RSC Adv. </i></strong> 2014, 4, 59650-59654. <br>
+									<strong>2</strong>. Hongying Zhu, <strong>Gongyu Li</strong>, Guangming Huang*. 
 									<a href="http://rd.springer.com/article/10.1007%2Fs13361-014-0862-7"><U>Screening of 
 									complicated matrixes with paper assisted ultrasonic spray ionization mass spectrometry.
 									</a></U> <strong><i>J. Am. Soc. Mass Spectrom. </i></strong> 2014, 25, 935-942.<br>
-									1. Fugang Xu*, Miao Deng, <strong>Gongyu Li</strong>, Shouhui Chen, Li Wang*. 
+									<strong>1</strong>. Fugang Xu*, Miao Deng, <strong>Gongyu Li</strong>, Shouhui Chen, Li Wang*. 
 									<a href="https://www.sciencedirect.com/science/article/pii/S0013468612016842"><U>Electrochemical 
 									behavior of cuprous oxide-reduced graphene oxide nanocomposites and their application 
 									in nonenzymatic hydrogen peroxide sensing.</a></U> <strong><i>Electrochim. Acta</i></strong> 2013, 88, 59-65.</p>
